[gd_scene load_steps=2 format=3 uid="uid://dulkirp0j7yge"]

[ext_resource type="Script" path="res://ui/hud/interactions/interaction.gd" id="1_psb5x"]

[node name="Interaction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_psb5x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="StatsMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 100

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer/StatsMarginContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Time" type="Label" parent="VBoxContainer/StatsMarginContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Time: 0"
vertical_alignment = 1

[node name="Hunger" type="Label" parent="VBoxContainer/StatsMarginContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Hunger: 0"
vertical_alignment = 1

[node name="Fun" type="Label" parent="VBoxContainer/StatsMarginContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fun: 0"
vertical_alignment = 1

[node name="Affection" type="Label" parent="VBoxContainer/StatsMarginContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Affection: 0"
vertical_alignment = 1

[node name="Energy" type="Label" parent="VBoxContainer/StatsMarginContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Energy: 0"
vertical_alignment = 1

[node name="ButtonsMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 148

[node name="Button" type="Button" parent="VBoxContainer/ButtonsMarginContainer"]
custom_minimum_size = Vector2(105, 43)
layout_mode = 2
size_flags_horizontal = 4
text = "GIVE FOOD"
